@@ -1,5 +1,7 @@
 2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* shr.el (shr-tag-table): Render totally broken tables better.
+
 	* mml.el (mml-generate-mime-1): Don't alter the contents if we're
 	computing the boundary.
 
